--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,10 @@
   </licenses>
 
   <properties>
-    <scala.version>2.7.7.RC2</scala.version>
+    <scala.version>2.9.1</scala.version>
+
+    <!-- Common plugin settings -->
+    <encoding>UTF-8</encoding>
   </properties>
 
   <repositories>
@@ -51,23 +54,34 @@
       <artifactId>scala-library</artifactId>
       <version>${scala.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.scalatest</groupId>
+      <artifactId>scalatest_2.9.1</artifactId>
+      <version>1.6.1</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.4</version>
+      <version>4.7</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
 
   <build>
-    <sourceDirectory>src/main/scala</sourceDirectory>
-    <testSourceDirectory>src/test/scala</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
         <executions>
           <execution>
+            <configuration>
+              <args>
+                <arg>-deprecation</arg>
+                <arg>-unchecked</arg>
+              </args>
+            </configuration> 
             <goals>
               <goal>compile</goal>
               <goal>testCompile</goal>
@@ -76,26 +90,11 @@
         </executions>
         <configuration>
           <scalaVersion>${scala.version}</scalaVersion>
+          <!--
           <args>
-            <arg>-unchecked</arg>
+            <arg></arg>
           </args>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-eclipse-plugin</artifactId>
-        <configuration>
-          <downloadSources>true</downloadSources>
-          <buildcommands>
-            <buildcommand>ch.epfl.lamp.sdt.core.scalabuilder</buildcommand>
-          </buildcommands>
-          <additionalProjectnatures>
-            <projectnature>ch.epfl.lamp.sdt.core.scalanature</projectnature>
-          </additionalProjectnatures>
-          <classpathContainers>
-            <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER</classpathContainer>
-            <classpathContainer>ch.epfl.lamp.sdt.launching.SCALA_CONTAINER</classpathContainer>
-          </classpathContainers>
+          -->
         </configuration>
       </plugin>
     </plugins>
@@ -107,6 +106,11 @@
         <artifactId>maven-scala-plugin</artifactId>
         <configuration>
           <scalaVersion>${scala.version}</scalaVersion>
+<!--
+          <jvmArgs>
+            <jvmArg>-Xmx1024m</jvmArg>
+          </jvmArgs>
+-->
         </configuration>
       </plugin>
     </plugins>
